--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -97,13 +97,13 @@ jobs:
           title: 'Update readme'
           body: ${{ env.COMMIT_MESSAGE }}
           commit-message: ${{ env.COMMIT_MESSAGE }}2.1
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Approve PR
         run: |
          curl --request POST \
          --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
-         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+         --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
          --header 'content-type: application/json' \
          -d '{"event":"APPROVE"}'
 
@@ -118,9 +118,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
-      - name: Delete branch
-        if: |
-          env.version_change == 'true' ||
-          env.VERSION_LINE_CHANGED == 'true'
-        run: |
-          git push origin --delete github-actions/readme-update
+      # - name: Delete branch
+      #   if: |
+      #     env.version_change == 'true' ||
+      #     env.VERSION_LINE_CHANGED == 'true'
+      #   run: |
+      #     git push origin --delete github-actions/readme-update
