--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
-VERSION_NAME=1.6-beta
+
+VERSION_NAME=1.6-alpha
