--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -103,7 +103,7 @@ jobs:
         run: |
          curl --request POST \
          --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
-         --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
+         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
          --header 'content-type: application/json' \
          -d '{"event":"APPROVE"}'
 
@@ -116,7 +116,7 @@ jobs:
           --repo ${{ github.repository }}
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Delete branch
       #   if: |
