--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -103,7 +103,7 @@ jobs:
         run: |
          curl --request POST \
          --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
-         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+         --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
          --header 'content-type: application/json' \
          -d '{"event":"APPROVE"}'
 
