--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -101,11 +101,14 @@ jobs:
 
       - name: Approve PR
         run: |
-         curl --request POST \
-         --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
-         --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
-         --header 'content-type: application/json' \
-         -d '{"event":"APPROVE"}'
+          gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+         # curl --request POST \
+         # --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
+         # --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
+         # --header 'content-type: application/json' \
+         # -d '{"event":"APPROVE"}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Turn On PR Auto-Merge
         if: |
