--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -99,19 +99,14 @@ jobs:
           commit-message: ${{ env.COMMIT_MESSAGE }}2.1
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Approve PR
-        if: |
-          env.version_change == 'true' ||
-          env.VERSION_LINE_CHANGED == 'true'
-        run: |
-          gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
-         # curl --request POST \
-         # --url https://api.github.com/repos/${{github.repository}}/pulls/${{steps.create-pr.outputs.pull-request-number}}/reviews \
-         # --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
-         # --header 'content-type: application/json' \
-         # -d '{"event":"APPROVE"}'
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      # - name: Approve PR
+      #   if: |
+      #     env.version_change == 'true' ||
+      #     env.VERSION_LINE_CHANGED == 'true'
+      #   run: |
+      #     gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Turn On PR Auto-Merge
         id: auto-merge
