--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,7 @@ android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
 
-VERSION_NAME=2.0-alpha
+
+
+
+VERSION_NAME=2.0-alphi
