--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
            gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
         env:
-           GITHUB_TOKEN: ${{ secrets.APP_TOKEN }}
+           GITHUB_TOKEN: ${{ env.APP_TOKEN }}
 
       - name: Turn On PR Auto-Merge
         id: auto-merge
