--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -67,10 +67,10 @@ jobs:
           fi
       - name: my-app-install token
         id: my-app
-        uses: getsentry/action-github-app-token@v2
+        uses: actions/create-github-app-token@v1
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: print app token
         run: |
