--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -67,12 +67,18 @@ jobs:
           fi
       - name: my-app-install token
         id: my-app
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
         uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: print app token
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
@@ -115,6 +121,7 @@ jobs:
            env.VERSION_LINE_CHANGED == 'true'
         run: |
            gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+           echo "approved"
         env:
            GITHUB_TOKEN: ${{ env.APP_TOKEN }}
 
