--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
-# The setting is particulare
+# The setting is particu
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # AndroidX
 # https://developer.andrco
