--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      # contents: write
+      contents: write
       pull-requests: write
     steps:
       - name: Checkout Repository
