--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -17,12 +17,16 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
 
-    # - name: Build with Maven
-    #   run: mvn -B test
+    - name: Run Tests
+      run: ./gradlew test
+
+    - name: Run Test Coverage
+      run: ./gradlew jacocoTestReport
 
     - name: Generate JaCoCo Badge
-      id: jacoco
       uses: cicirello/jacoco-badge-generator@v2
+      with:
+        jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
 
     - name: Log coverage percentage
       run: |
