--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -1,4 +1,4 @@
-name: build
+name: jacoco
 
 on:
   push:
@@ -16,6 +16,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
     - name: Run Tests
       run: ./gradlew test
