--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
         
       - name: Run Tests
         run: ./gradlew test
