--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ id 'java'
 
 jacocoTestReport {
     reports {
-        csv.enabled true
+        xml.required = false
+        csv.required = true
+        html.required = false
     }
 }
