--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ id 'java'
 
 jacocoTestReport {
     reports {
-        xml.required = true
+        xml.required = false
         csv.required = true
-        html.required = true
+        csv,outputLocation = 'build/reports/jacoco/test/jacocoTestReport.csv'
+        html.required = false
     }
 }
