--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -23,13 +23,14 @@ jobs:
         run: ./gradlew test
 
       - name: Run Test Coverage
-        run: ./gradlew jacocoTestReport
+        run: |
+          ./gradlew jacocoTestReport
 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
         with:
           generate-branches-badge: true
-          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+          # jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
 
       - name: Log coverage percentage
         run: |
