--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply from: '../gradle/modules.gradle'
+
 android {
     namespace 'com.example.breach'
     compileSdk 34
