--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,4 @@ id 'jacoco'
 id 'java'
 }
 
-jacocoTestReport {
-    reports {
-        xml.required = false
-        csv.required = true
-        html.required = false
-    }
-}
+apply from: 'gradle/project.gradle'
