--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -1,38 +1,31 @@
-name: jacoco
+name: Measure coverage spandan
 
 on:
   push:
     branches: [ main ]
+  pull_request:
 
 jobs:
-  badge_job:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up the Java JDK
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt'
-          
+          java-version: 17
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-        
-      - name: Run Tests
-        run: ./gradlew test
 
-      - name: Run Test Coverage
-        run: |
-          ./gradlew jacocoTestReport
+      - name: Run Module Coverage
+        run: ./gradlew debugCoverage
 
-      - name: Generate JaCoCo Badge
-        uses: cicirello/jacoco-badge-generator@v2
+      - name: test
+        uses: kevinfjiang/coverage-badge@v1
         with:
-          generate-branches-badge: true
-          # jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
-
-      - name: Log coverage percentage
-        run: |
-          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+          coverage: 67
+          change_file: ./README.md
