--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -37,9 +37,15 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: test
-        uses: kevinfjiang/coverage-badge@v1
+      - name: Generate JaCoCo Badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2
         with:
-          coverage: 69
-          change_file: ./README.md
-          repo_token: ${{ env.APP_TOKEN }}
+          generate-branches-badge: true
+          jacoco-csv-file:  |
+            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.csv
+
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
