--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -42,8 +42,7 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           generate-branches-badge: true
-          jacoco-csv-file:  |
-            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.csv
+          jacoco-csv-file: build/reports/jacoco/test/debugCoverage.csv
 
       - name: Log coverage percentage
         run: |
