--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -21,11 +21,6 @@ jobs:
       - name: Run Module Coverage
         run: ./gradlew debugCoverage
 
-      - name: trigger workflow
-        if: github.event.pull_request.merged == true
-        run: |
-          echo "triggered the workflow"
-
       - name: my-app-install token
         id: my-app
         uses: actions/create-github-app-token@v1
@@ -37,14 +32,21 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: Generate JaCoCo Badge
+      - name: Jacoco Report to PR
         id: jacoco
-        uses: cicirello/jacoco-badge-generator@v2
+        uses: madrapps/jacoco-report@v1.6.1
         with:
-          generate-branches-badge: true
-          jacoco-csv-file: build/reports/jacoco/test/debugCoverage.csv
+          paths: |
+            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
+          title: Code Coverage
+          debug-mode: true
+          pass-emoji: ':green_circle:'
+          fail-emoji: ':red_circle:'
 
-      - name: Log coverage percentage
+      - name: Get the Coverage info
         run: |
-          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+          echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
+          echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
