--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -32,21 +32,15 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: Jacoco Report to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6.1
+      # generates coverage-report.md and publishes as checkrun
+      - name: JaCoCo Code Coverage Report
+        id: jacoco_reporter
+        uses: PavanMudigonda/jacoco-reporter@v4.9
         with:
-          paths: |
+          coverage_results_path: |
             ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 40
-          min-coverage-changed-files: 60
-          title: Code Coverage
-          debug-mode: true
-          pass-emoji: ':green_circle:'
-          fail-emoji: ':red_circle:'
-
-      - name: Get the Coverage info
+      
+      # Publish Coverage Job percent  # Optional
+      - name: Add Coverage Job percent
         run: |
-          echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
-          echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+          echo "percent : ${{ steps.jacoco_reporter.outputs.coverage_percentage }}"
