--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -37,7 +37,7 @@ jobs:
         id: jacoco_reporter
         uses: PavanMudigonda/jacoco-reporter@v4.9
         with:
-          coverage_results_path: build/reports/jacoco/allDebugCoverage.xml
+          coverage_results_path: ./jacoco.xml
       
       # Publish Coverage Job percent  # Optional
       - name: Add Coverage Job percent
