--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -2,8 +2,15 @@ name: Measure coverage
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main 
   pull_request:
+
+env:
+  COMMIT_MESSAGE: |
+    Update jacoco badge
+
+    Created by GitHub Action [${{ github.workflow }} #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
 jobs:
   build:
@@ -21,10 +28,14 @@ jobs:
       - name: Run Module Coverage
         run: ./gradlew debugCoverage
 
-      - name: trigger workflow
-        if: github.event.pull_request.merged == true
+      - name: Generate JaCoCo Badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2
+
+      - name: Log coverage percentage
         run: |
-          echo "triggered the workflow"
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
       - name: my-app-install token
         id: my-app
@@ -37,9 +48,31 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: test
-        uses: kevinfjiang/coverage-badge@v1
+      - name: Create PR
+        id: create-pr
+        uses: peter-evans/create-pull-request@v5
         with:
-          coverage: 69
-          change_file: ./README.md
-          repo_token: ${{ env.APP_TOKEN }}
+          base: main
+          branch: github-actions/readme-update
+          delete-branch: true
+          author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
+          title: 'Update readme'
+          body: ${{ env.COMMIT_MESSAGE }}
+          commit-message: ${{ env.COMMIT_MESSAGE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Approve PR
+        run: |
+           gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+           echo "approved"
+        env:
+           GITHUB_TOKEN: ${{ env.APP_TOKEN }}
+
+      - name: Turn On PR Auto-Merge
+        id: auto-merge
+        run: >
+          gh pr merge --squash --auto 
+          --repo ${{ github.repository }} --delete-branch
+          ${{ steps.create-pr.outputs.pull-request-number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
