--- a/gradle/project.gradle
+++ b/gradle/project.gradle
@@ -20,6 +20,7 @@ project.afterEvaluate {
         reports {
             html.required.set(true)
             xml.required.set(true)
+            csv.required.set(true)
         }
 
         def excludes = [
