--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -26,11 +26,17 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Module Coverage
-        run: ./gradlew debugCoverage
+        run: ./gradlew debugCoverage --continue
+
+      - name: print csv files
+        run: echo $(find . -type f -name "debugCoverage.csv")
 
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
+        with:
+          jacoco-csv-file: >
+            $(find . -type f -name "debugCoverage.csv")
 
       - name: Log coverage percentage
         run: |
