--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -36,7 +36,7 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           jacoco-csv-file: >
-            $(find . -type f -name "debugCoverage.csv")
+            ./app/build/reports/jacoco/debugCoverage/debugCoverage.csv
 
       - name: Log coverage percentage
         run: |
