--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -2,8 +2,15 @@ name: Measure coverage
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main 
   pull_request:
+
+env:
+  COMMIT_MESSAGE: |
+    Update jacoco badge
+
+    Created by GitHub Action [${{ github.workflow }} #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
 jobs:
   build:
@@ -19,7 +26,22 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Module Coverage
-        run: ./gradlew debugCoverage
+        run: ./gradlew debugCoverage --continue
+
+      - name: print csv files
+        run: echo $(find . -type f -name "debugCoverage.csv")
+
+      - name: Generate JaCoCo Badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          jacoco-csv-file: >
+            ./app/build/reports/jacoco/debugCoverage/debugCoverage.csv
+
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
       - name: my-app-install token
         id: my-app
@@ -32,14 +54,33 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      # generates coverage-report.md and publishes as checkrun
-      - name: JaCoCo Code Coverage Report
-        id: jacoco_reporter
-        uses: PavanMudigonda/jacoco-reporter@v4.9
+      - name: Create PR
+        id: create-pr
+        uses: peter-evans/create-pull-request@v5
         with:
-          coverage_results_path: ./jacoco.xml
-      
-      # Publish Coverage Job percent  # Optional
-      - name: Add Coverage Job percent
+          base: main
+          branch: github-actions/readme-update
+          delete-branch: true
+          author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
+          title: 'Update readme'
+          body: ${{ env.COMMIT_MESSAGE }}
+          commit-message: ${{ env.COMMIT_MESSAGE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          add-paths: |
+            */jacoco.svg
+
+      - name: Approve PR
         run: |
-          echo "percent : ${{ steps.jacoco_reporter.outputs.coverage_percentage }}"
+           gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+           echo "approved"
+        env:
+           GITHUB_TOKEN: ${{ env.APP_TOKEN }}
+
+      - name: Turn On PR Auto-Merge
+        id: auto-merge
+        run: >
+          gh pr merge --squash --auto 
+          --repo ${{ github.repository }} --delete-branch
+          ${{ steps.create-pr.outputs.pull-request-number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
