--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -68,8 +68,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: |
             */jacoco.svg
+            
+      - name: pr number
+        run: | 
+          echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
       - name: Approve PR
+        if: steps.create-pr.outputs.pull-request-number
         run: |
            gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
            echo "approved"
@@ -78,6 +83,7 @@ jobs:
 
       - name: Turn On PR Auto-Merge
         id: auto-merge
+        if: steps.create-pr.outputs.pull-request-number
         run: >
           gh pr merge --squash --auto 
           --repo ${{ github.repository }} --delete-branch
