--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -36,7 +36,7 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           jacoco-csv-file: >
-            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.csv
+            ./**/build/reports/jacoco/**/debugCoverage.csv
 
       - name: Log coverage percentage
         run: |
