--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -40,7 +40,7 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           jacoco-csv-file: >
-            ./**/build/reports/jacoco/**/debugCoverage.csv
+            ${{ env.CSV }}
 
       - name: Log coverage percentage
         run: |
