--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -47,50 +47,50 @@ jobs:
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
           echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
-      - name: my-app-install token
-        id: my-app
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.ALTERNATE_APP_ID }}
-          private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+      # - name: my-app-install token
+      #   id: my-app
+      #   uses: actions/create-github-app-token@v1
+      #   with:
+      #     app-id: ${{ secrets.ALTERNATE_APP_ID }}
+      #     private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
 
-      - name: print app token
-        run: |
-          echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
+      # - name: print app token
+      #   run: |
+      #     echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: Create PR
-        id: create-pr
-        uses: peter-evans/create-pull-request@v5
-        with:
-          base: main
-          branch: github-actions/readme-update
-          delete-branch: true
-          author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
-          title: 'Update readme'
-          body: ${{ env.COMMIT_MESSAGE }}
-          commit-message: ${{ env.COMMIT_MESSAGE }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          add-paths: |
-            */jacoco.svg
+      # - name: Create PR
+      #   id: create-pr
+      #   uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     base: main
+      #     branch: github-actions/readme-update
+      #     delete-branch: true
+      #     author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
+      #     title: 'Update readme'
+      #     body: ${{ env.COMMIT_MESSAGE }}
+      #     commit-message: ${{ env.COMMIT_MESSAGE }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     add-paths: |
+      #       */jacoco.svg
             
-      - name: pr number
-        run: | 
-          echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
+      # - name: pr number
+      #   run: | 
+      #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
-      - name: Approve PR
-        if: steps.create-pr.outputs.pull-request-number
-        run: |
-           gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
-           echo "approved"
-        env:
-           GITHUB_TOKEN: ${{ env.APP_TOKEN }}
+      # - name: Approve PR
+      #   if: steps.create-pr.outputs.pull-request-number
+      #   run: |
+      #      gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+      #      echo "approved"
+      #   env:
+      #      GITHUB_TOKEN: ${{ env.APP_TOKEN }}
 
-      - name: Turn On PR Auto-Merge
-        id: auto-merge
-        if: steps.create-pr.outputs.pull-request-number
-        run: >
-          gh pr merge --squash --auto 
-          --repo ${{ github.repository }} --delete-branch
-          ${{ steps.create-pr.outputs.pull-request-number }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Turn On PR Auto-Merge
+      #   id: auto-merge
+      #   if: steps.create-pr.outputs.pull-request-number
+      #   run: >
+      #     gh pr merge --squash --auto 
+      #     --repo ${{ github.repository }} --delete-branch
+      #     ${{ steps.create-pr.outputs.pull-request-number }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
