--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -80,8 +80,8 @@ jobs:
 
       - name: Run script
         run: |
-          chmod +x approve_and_merge_pr.sh
-          ./approve_and_merge_pr.sh ${{ steps.create-pr.outputs.pull-request-number }} ${{ env.APP_TOKEN }} ${{ secrets.GITHUB_TOKEN }}
+          chmod +x ./.github/approve_and_merge_pr.sh ${{ steps.create-pr.outputs.pull-request-number }} ${{ env.APP_TOKEN }} ${{ secrets.GITHUB_TOKEN }}
+          
 
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
