--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -80,9 +80,7 @@ jobs:
 
       - name: Run script
         run: |
-          chmod +x ./.github/approve_and_merge_pr.sh ${{ steps.create-pr.outputs.pull-request-number }} ${{ env.APP_TOKEN }} ${{ secrets.GITHUB_TOKEN }}
-          
-
+          chmod +x ./.github/approve_and_merge_pr.sh
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
       #   run: |
