--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -77,8 +77,11 @@ jobs:
         run: | 
           echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
-      - name: Run script
-        uses: ./.github/approve_and_merge_pr.yml
+      - name: Approve and Merge PR
+        uses: ./.github/actions/approve_and_merge
+        with:
+          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
+          app-token: ${{ env.APP_TOKEN }}
           
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
