--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -82,6 +82,7 @@ jobs:
         with:
           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
           app-token: ${{ env.APP_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
