--- a/.github/actions/approve_and_merge/action.yml
+++ b/.github/actions/approve_and_merge/action.yml
@@ -14,9 +14,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Checkout code
-      run: actions/checkout@v2
-      shell: bash
+    # - name: Checkout code
+    #   run: actions/checkout@v2
+    #   shell: bash
 
     - name: Approve PR
       run: |
