--- a/.github/actions/approve_and_merge/action.yml
+++ b/.github/actions/approve_and_merge/action.yml
@@ -24,7 +24,7 @@ runs:
         gh pr review ${{ inputs.pull-request-number }} --approve
       shell: bash
       env:
-        GITHUB_TOKEN: ${{ inputs.app-token }}
+        GITHUB_TOKEN: ${{ env.APP_TOKEN }}
 
     - name: Turn On PR Auto-Merge
       if: inputs.pull-request-number
@@ -32,4 +32,4 @@ runs:
         gh pr merge --squash --auto --repo ${{ github.repository }} --delete-branch ${{ inputs.pull-request-number }}
       shell: bash
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github-token }}
