--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -58,31 +58,32 @@ jobs:
         run: |
           echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
 
-      - name: Create PR
-        id: create-pr
-        uses: peter-evans/create-pull-request@v5
-        with:
-          base: main
-          branch: github-actions/readme-update
-          delete-branch: true
-          author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
-          title: 'Update readme'
-          body: ${{ env.COMMIT_MESSAGE }}
-          commit-message: ${{ env.COMMIT_MESSAGE }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          add-paths: |
-            */jacoco.svg
+      # - name: Create PR
+      #   id: create-pr
+      #   uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     base: main
+      #     branch: github-actions/readme-update
+      #     delete-branch: true
+      #     author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
+      #     title: 'Update readme'
+      #     body: ${{ env.COMMIT_MESSAGE }}
+      #     commit-message: ${{ env.COMMIT_MESSAGE }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     add-paths: |
+      #       */jacoco.svg
             
-      - name: pr number
-        run: | 
-          echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
+      # - name: pr number
+      #   run: | 
+      #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
-      - name: Approve and Merge PR
+      - name: Create, Approve and Merge PR
         if: steps.create-pr.outputs.pull-request-number
         uses: ./.github/actions/approve_and_merge
         with:
-          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          add-paths: |
+            */jacoco.svg
           
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
