--- a/.github/actions/approve_and_merge/action.yml
+++ b/.github/actions/approve_and_merge/action.yml
@@ -24,6 +24,10 @@ runs:
           commit-message: ${{ env.COMMIT_MESSAGE }}
           token: ${{ inputs.github-token }}
           add-paths: ${{ inputs.add-paths }}
+
+    - name: pr number
+      run: | 
+        echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
             
     - name: Approve PR
       if: ${{ steps.create-pr.outputs.pull-request-number }}
